# hydrahouse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  railway.toml
.github/workflows/: ci.yml
crates/hh-api/: Cargo.toml
crates/hh-api/src/: auth.rs  billing.rs  error.rs  handlers.rs  lib.rs  lifecycle.rs  main.rs  openapi.rs  ratelimit.rs  state.rs  ws.rs
crates/hh-api/src/handlers/: accounts.rs  api_keys.rs  auth_google.rs  auth_link.rs  auth_passkey.rs  heads.rs  health.rs  transactions.rs
crates/hh-api/tests/: api_test.rs
crates/hh-cli/: Cargo.toml
crates/hh-cli/src/: commands.rs  main.rs
crates/hh-core/: Cargo.toml
crates/hh-core/src/: config.rs  error.rs  head.rs  lib.rs  network.rs  participant.rs
crates/hh-db/: Cargo.toml
crates/hh-db/src/: lib.rs  repo.rs
crates/hh-db/src/repo/: accounts.rs  api_keys.rs  auth_challenges.rs  head_events.rs  heads.rs  participants.rs  passkeys.rs  sessions.rs  usage.rs
crates/hh-keys/: Cargo.toml
crates/hh-keys/examples/: derive_address.rs
crates/hh-keys/src/: bech32.rs  cardano.rs  hydra.rs  lib.rs  tx.rs
crates/hh-orchestrator/: Cargo.toml
crates/hh-orchestrator/src/: docker.rs  encrypt.rs  funding.rs  lib.rs  manager.rs  pods.rs  railway.rs  secrets.rs
dashboard/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  auth.tsx  google.d.ts  index.css  utils.ts
dashboard/src/components/: ConfirmModal.tsx  CreateHeadModal.tsx  ErrorBoundary.tsx  EventHistory.tsx  FeatureShowcase.tsx  Layout.tsx  LifecycleBar.tsx  ParticipantCard.tsx  StatusBadge.tsx  TransferForm.tsx  TxSubmitForm.tsx  UtxoViewer.tsx
dashboard/src/pages/: Account.tsx  ApiKeys.tsx  Billing.tsx  HeadDetail.tsx  HeadsList.tsx  Landing.tsx  Login.tsx
dashboard/src/pages/docs/: ApiReference.tsx  Concepts.tsx  QuickStart.tsx  SdkGuide.tsx
deploy/k8s/: api.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  rbac.yaml  secrets.yaml
docker/: Dockerfile.api  docker-compose.yml
docker/hydra-node-railway/: Dockerfile  entrypoint.sh
migrations/: 20260219000000_initial.sql  20260220000000_usage_tracking.sql  20260228000000_billing.sql  20260309000000_api_key_id.sql  20260310000000_prepaid_balance.sql  20260310000001_google_oauth.sql  20260311000000_sessions_and_api_keys.sql  20260311100000_sessions_account_id_index.sql  20260317000000_passkeys_and_wallets.sql  20260317000001_username.sql
scripts/: e2e-test.sh  gen_platform_wallet.sh  seed.sh
sdk/: README.md  package-lock.json  package.json
sdk/src/: client.ts  index.ts  types.ts
