[workspace]
members = [
    "crates/hh-core",
    "crates/hh-api",
    "crates/hh-db",
    "crates/hh-orchestrator",
    "crates/hh-keys",
    "crates/hh-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
hh-core = { path = "crates/hh-core" }
hh-db = { path = "crates/hh-db" }
hh-keys = { path = "crates/hh-keys" }
hh-orchestrator = { path = "crates/hh-orchestrator" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Auth
argon2 = "0.5"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
