[package]
name = "hh-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hh-api"
path = "src/main.rs"

[dependencies]
hh-core = { workspace = true }
hh-db = { workspace = true }
hh-keys = { workspace = true }
hh-orchestrator = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
utoipa = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
kube = { workspace = true }
async-trait = "0.1"
hex = "0.4"
dotenvy = "0.15.7"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
