[package]
name = "hh-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hh-api"
path = "src/main.rs"

[dependencies]
hh-core = { workspace = true }
hh-db = { workspace = true }
hh-keys = { workspace = true }
hh-orchestrator = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
utoipa = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
hex = "0.4"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
dotenvy = "0.15.7"
urlencoding = "2.1"
hmac = "0.12"
sha2 = "0.10"
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
p256 = { workspace = true }
url = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
