[package]
name = "hh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hydrahouse"
path = "src/main.rs"

[dependencies]
hh-core = { workspace = true }
hh-keys = { workspace = true }
hh-orchestrator = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
ed25519-dalek = { workspace = true }
dotenvy = "0.15"
