[package]
name = "hh-keys"
version.workspace = true
edition.workspace = true

[dependencies]
hh-core = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
