[package]
name = "hh-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
hh-core = { workspace = true }
hh-keys = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
hex = "0.4"
