[package]
name = "hh-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hh-core = { workspace = true }
hh-keys = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
blake2 = "0.10"
